hphp/hack/test/typecheck/trait_priv_extends1.php.exp
File "trait_priv_extends1.php", line 17, characters 20-20:
The method `f` is not compatible with the overridden method (Typing[4341])
  File "trait_priv_extends1.php", line 5, characters 25-27:
  Expected `int`
  File "trait_priv_extends1.php", line 17, characters 25-30:
  But got `string`
